# llm-perf-analyzer

./: .gitignore  LICENSE  README.md  SKILL.md  analyze.py  pyproject.toml  requirements.txt
adapters/: __init__.py  json_adapter.py  prometheus_adapter.py
configs/: web_app.yaml
core/: __init__.py  compare.py  metrics.py  polarity.py  report.py
tests/: test_compare.py  test_json_adapter.py  test_metrics.py  test_polarity.py  test_prometheus_adapter.py  test_report.py  test_yaml_config.py
tests/fixtures/: baseline.json  candidate.json  sample_perf_test_items.json  sample_prometheus.txt  sample_wrapped_perf_results.json
